# symlink-checker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_configuration.h.in  symlinks.c
